[B]1.1.3[/B]
- Rajout option si clique ok/enter pendant fiche ou bande annonce dans mode 1 et 2 lancera directement le film
- Stop quittera le script
- Option permettant de ne pas afficher les films sans BA dans les resultats du mode 4 (speciale dedicace nono63)
- Correction de bugs
[B]1.1.2[/B]
- Correction si voir BA est non dans mode 1
[B]1.1.1[/B]
- Amelioration detection VO 
[B]1.1.0[/B]
- Rajout de la recherche a venir et a l'affiche en se basant sur allocine
- rajout d'une section recherche de film pour voir la bande annonce d'un film en le recherchant
- correction de bugs

[B]1.0.0[/B]
- Premiere version