@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="script.cine_annonces"
        name="Cine annonces"
-       version="1.1.3"
+       version="1.1.4"
        provider-name="sarakha63">
   <requires>
     <import addon="xbmc.python"					version="2.1.0"/>
