@@ -1,3 +1,5 @@
+[B]1.1.4[/B]
+- Amelioration du rajout d'un film directement dans couchpotato (plugin couchmanager version sarakha necessaire)
 [B]1.1.3[/B]
 - Rajout option si clique ok/enter pendant fiche ou bande annonce dans mode 1 et 2 lancera directement le film
 - Stop quittera le script
